# Benchmark-Signature-Repository

./: README.md  requirements.txt
config/: config.yaml  read_config.py
perplexity_eval/: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh  vllm_config.yaml  wiki_eval.py
perplexity_eval/script/: download_redpajama_data.py  read_result_parquet.py
regression/: regression_run.py  run_regression.sh
